# BRAG

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE.md  Projekt hinzufuegen.bat  Projekt hinzufuegen.command  README.de.md  README.md  SECURITY.md  Verbindung reparieren.bat  Verbindung reparieren.command  docker-compose.yml  pyproject.toml  requirements.txt  setup.bat  setup.command  status.bat  status.command  uninstall.bat  uninstall.command  update.bat  update.command
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml  release-image.yml
asb/: config.py  health.py  http_bridge.py  main.py  mcp_server.py  profiles.py  setup_core.py  setup_page.html  setup_wizard.py  storage.py  watcher.py
asb/embeddings/: __init__.py  base.py  gemini.py  local_st.py  ollama.py  openai.py  sparse.py
asb/ingest/: chunking.py  contextualize.py  (+3 more)
brag/: __init__.py  claude_sync.py  compose_gen.py  config.py  formatting.py  health.py  http_bridge.py  main.py  mcp_client.py  mcp_server.py  pdf_open.py  profiles.py  projects.py  registry.py  setup_core.py  setup_page.html  setup_server.py  setup_wizard.py  storage.py  tools.py  vault.py  watcher.py
docs/: ARCHITECTURE.de.md  ARCHITECTURE.md  CUSTOMIZE_CLAUDE.de.md  CUSTOMIZE_CLAUDE.md  FAQ.de.md  FAQ.md  HOW_IT_WORKS.de.md  HOW_IT_WORKS.md  INSTALL_MAC.de.md  INSTALL_MAC.md  INSTALL_WINDOWS.de.md  INSTALL_WINDOWS.md  LEGAL.de.md  LEGAL.md  OBSIDIAN.de.md  OBSIDIAN.md  PROFILES.de.md  PROFILES.md  WHICH_CLAUDE.de.md  WHICH_CLAUDE.md
studiolo/: config.py  http_bridge.py  main.py  mcp_server.py  profiles.py  setup_core.py  setup_page.html  setup_wizard.py  storage.py  watcher.py
tests/: e2e_smoke.py  make_sample_pdf.py  test_claude_sync.py  test_compose_gen.py  test_config.py  test_crash_loop.py  test_http_bridge.py  test_projects.py  test_projects_cli.py  test_registry.py  test_setup_core.py  test_tools.py  test_unit.py
tools/: ensure_claude_closed.bat  mark_engine_folder.bat  mark_engine_folder.command  merge_claude_config.ps1  merge_claude_config.py  merge_lmstudio_config.ps1  merge_lmstudio_config.py  pick_folder.ps1  remove_claude_mcp.py
vault_template/: AGENTS.md  CLAUDE.md  README.md
(+52 files in other folders)
