[project]
name = "brag"
version = "0.3.1"  # keep in sync with brag/__init__.py:__version__
description = "BRAG — Building Retrieval-Augmented Generation: a local, page-cited RAG second brain for Claude Desktop."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Marko Drinjak" }]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["vault_template"]

[tool.ruff.lint]
# Floor = the original CI gate (runtime errors, undefined names, unused
# imports/redefinitions). Added E501 (line length) and W (whitespace) — both
# already satisfied by the current tree, so formalising them here cannot turn
# CI red. Deliberately NOT enabling I/UP/B/SIM: they would require churn or
# touch intentional choices (e.g. EnvironmentError, bare-except guards).
select = ["E9", "F63", "F7", "F82", "F401", "F811", "E501", "W"]
